--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.6.3"
   }
 }
