--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary-core": "^2.13.1",
     "firebase": "^11.0.1",
     "next": "15.0.2",
     "react": "^18.3.1",
