--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.3.0",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
