--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "cloudinary-core": "^2.13.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.0.1",
     "next": "15.0.2",
     "react": "^18.3.1",
