--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "cloudinary-core": "^2.13.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
+    "react-image-crop": "^11.0.7",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
