--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
+    "react-linkify-it": "^1.0.8",
     "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
