--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary-core": "^2.13.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.1",
+    "firebase-admin": "^13.0.1",
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
