--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.0.1",
     "firebase-admin": "^13.0.1",
+    "framer-motion": "^12.4.7",
     "next": "15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
