--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "firebase": "^11.0.1",
     "firebase-admin": "^13.0.1",
     "framer-motion": "^12.4.7",
-    "next": "15.0.2",
+    "next": "^15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
     "react-linkify-it": "^1.0.8",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-to-print": "^3.0.5",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
