--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "cloudinary-core": "^2.13.1",
     "date-fns": "^4.1.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.0.1",
     "firebase-admin": "^13.0.1",
     "framer-motion": "^12.4.7",
