--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "firebase": "^11.0.1",
     "firebase-admin": "^13.0.1",
     "framer-motion": "^12.4.7",
+    "lucide-react": "^0.487.0",
     "next": "^15.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-image-crop": "^11.0.7",
     "react-linkify-it": "^1.0.8",
